--- a/frontend/agri-price-tracker/src/index.html
+++ b/frontend/agri-price-tracker/src/index.html
@@ -1,22 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>AgriPrice - Agricultural Price Tracking System</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/">
-    <link rel="icon" type="image/svg+xml" href="logo.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <app-root>
-      <div class="loading-container">
-        <div class="loading-spinner"></div>
-        <p>Loading AgriPrice System...</p>
+
+<head>
+  <title>AgriPrice - Agricultural Price Tracking System</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <base href="/">
+  <link rel="icon" type="image/svg+xml" href="logo.svg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+</head>
+
+<body>
+  <app-root>
+    <div id="agrone-loader"
+      style="position: fixed; top: 0; left: 0; width: 100%; height: 100vh; background-color: #052e16; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 9999; font-family: 'Poppins', sans-serif;">
+
+      <!-- Ambient Glow -->
+      <div
+        style="position: absolute; width: 300px; height: 300px; background: #bef264; filter: blur(120px); opacity: 0.1; border-radius: 50%;">
       </div>
-    </app-root>
-  </body>
+
+      <!-- Loader Icon -->
+      <div
+        style="position: relative; width: 80px; height: 80px; background: rgba(255,255,255,0.05); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 2rem; box-shadow: 0 0 30px rgba(0,0,0,0.2);">
+        <div style="font-size: 2.5rem; color: #bef264; animation: pulse 2s infinite ease-in-out;">
+          <i class="fas fa-leaf"></i>
+        </div>
+        <!-- Spinner Ring -->
+        <div
+          style="position: absolute; top: -5px; left: -5px; right: -5px; bottom: -5px; border-radius: 50%; border: 2px solid transparent; border-top-color: #bef264; animation: spin 1.5s linear infinite;">
+        </div>
+      </div>
+
+      <!-- Text -->
+      <h1 style="color: white; font-size: 1.5rem; font-weight: 700; margin: 0; letter-spacing: -0.02em;">AgriPrice</h1>
+      <p style="color: rgba(255,255,255,0.5); font-size: 0.875rem; font-weight: 500; margin-top: 0.5rem;">Initialize
+        Market Data...</p>
+
+      <style>
+        @keyframes pulse {
+
+          0%,
+          100% {
+            transform: scale(1);
+            opacity: 1;
+          }
+
+          50% {
+            transform: scale(1.1);
+            opacity: 0.8;
+          }
+        }
+
+        @keyframes spin {
+          0% {
+            transform: rotate(0deg);
+          }
+
+          100% {
+            transform: rotate(360deg);
+          }
+        }
+      </style>
+    </div>
+  </app-root>
+</body>
+
 </html>
